--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring
+spring.datasource.url=jdbc:mysql://localhost:3306/rest
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
-server.port=8082
+server.port=8080
+spring.jpa.hibernate.ddl-auto=update
